force-app/main/default/objects/Branch__c/fields/Branch_Id__c.field-meta.xml
<CustomField>
    <fullName>Branch_Id__c</fullName>
    <displayFormat>{YYYY}-{MM}-{DD}-{0000}</displayFormat>
    <inlineHelpText>Branch id with year month date</inlineHelpText>
    <label>Branch Id</label>
    <type>AutoNumber</type>
</CustomField>