force-app/main/default/objects/Branch__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Branch is active or not</description>
    <inlineHelpText>This is check  the branch is active or not</inlineHelpText>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>