force-app/main/default/objects/Branch__c/fields/No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days__c</fullName>
    <formula>Text(TODAY()-Start_Date__c)+ &quot;_&quot; +&quot;days&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Days</label>
    <type>Text</type>
</CustomField>